--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@
 theme = "hugo-theme-codex"
 
 # Override these settings with your own
-title = "codex"
+title = "r4fun"
 languageCode = "en-us"
 baseURL = "https://r4fun.dev"
 copyright = "© {2020}"
