update twitter handle to my personal for now...

--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ copyright = "© {2020}"
   dateFormat = "Jan 2 2006"
 
   # Links to your social accounts, comment/uncomment as needed. Icons will be displayed for those specified.
-  twitter = "https://twitter.com/<your handle>"
+  twitter = "https://twitter.com/tyluRp"
   github = "https://github.com/r4fun"
   # email = "mailto:<your email>"
   # facebook = "https://facebook.com/<your handle>"
