--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,9 @@ baseURL = "https://r4fun.dev"
 copyright = "© {2020}"
 enableEmoji = true
 
+# ignore R stuff
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+
 # Add your Disqus shortname here.
 # disqusShortname = ""
 
